Fix styles on mobile devices

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,4 +1,5 @@
 body {
+  position: relative;
   background-color: $background-color;
   color: $main-text-color;
   font-family: $text-font;
