--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -9,8 +9,10 @@
   .header-container {
     display: flex;
     height: 60px;
+    width: 100vh;
       
-    h2 {
+    .logo {
+      display: flex;
       color: $main-color;
       font-family: $logo-font;
       font-size: 42px;
@@ -19,8 +21,11 @@
       padding-right: 40px;
     }
 
-    .burger-btn {
-      padding-top: 10px;
+    .burger-btn { 
+      display: none;
+      outline: none;
+      border: none;
+      padding-top: 5px;
       font-size: 25px;
       background-color: $sidebar-color;
       color: $main-text-color;      
@@ -81,12 +86,23 @@
   }  
 }
 
-@media (max-width: 991px){
+@media (max-width: 767px){
   .sidebar-container {
     height: 60px;
-    width: 100vh;
-    z-index: 10;
+    width: 100%;
+    padding-right: 20px;
 
+    .header-container {
+      display: flex;
+      justify-content: space-between;
+      height: 60px;
+      width: 100%;
+
+      .burger-btn { 
+        display: inline-block;
+      }
+    }
+    
     .sidebar-menu, .manager-container {
       display: none;
     } 
