--- a/src/sass/sections/_topbar.scss
+++ b/src/sass/sections/_topbar.scss
@@ -47,7 +47,7 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .topbar {
     display: none;
   }
